cornelsen/informatik_6_ga_2024/kapitel_03/thema_03/aufgabe_06